add api support

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Best Weather</string>
+    <string name="find_best_weather">Find Best Weather</string>
 </resources>
