--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Best Weather</string>
     <string name="find_best_weather">Find Best Weather</string>
+    <string name="copyright_notice">© Copyright Ryan Kennedy</string>
+    <string name="settings">settings</string>
 </resources>
